COP form: fix CSS alignment

--- a/public/stylesheets/sass/admin.sass
+++ b/public/stylesheets/sass/admin.sass
@@ -507,24 +507,19 @@ ul.nav_bar
     input, select, textarea
       color: #000
       margin: 2px 4px 1px 25px
+      padding: 0 0 0 3px
       width: 305px
       font-family: "Helvetica Neue",Arial,Helvetica,sans-serif
       font-size: 1em
     
     input[type="checkbox"], input[type="radio"], input[type="file"] 
       width: auto
-      margin: 0 5px 0 0
+      margin: 0 5px 0px 25px
     
     span.cke_skin_kama
       display: block
       margin: 0 5px 0 120px
     
-    input, textarea
-      padding: 0 0 0 3px
-      
-    select
-      width: 307px
-  
     textarea
       height: 100px
       overflow-y: auto
@@ -538,6 +533,10 @@ ul.nav_bar
         background: #fcfcfc url('../images/backgrounds/legend_bg.png') repeat-x 0 0
         padding: 5px
         border: 1px solid #cccccc
+      
+      input[type="checkbox"], input[type="radio"], input[type="file"] 
+        width: auto
+        margin: -2px 10px 0px 5px
       
       label
         display: block
@@ -556,13 +555,9 @@ ul.nav_bar
         display: block
         position: relative
         line-height: 1em
-        left: 20px
+        left: 25px
         top: -10px
       
-      input
-        width: 10px
-        margin: 3px 3px 0 0
-        
       select
         margin-left: 0
 
